--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
-    <title>CSS Layout Masterclass</title>
-  </head>
-  <body>
-    <h1>Hello vite</h1>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css">
+  <title>CSS Layout Masterclass</title>
+</head>
+
+<body>
+  <div class="box"></div>
+  <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt doloribus quibusdam repudiandae commodi cupiditate obcaecati, quod sint illo deleniti corporis adipisci animi ea. Ducimus expedita facere delectus vel eum. Exercitationem!</div>
+  <div class="box"></div>
+</body>
+
 </html>
