--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="box"></div>
-  <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt doloribus quibusdam repudiandae commodi cupiditate obcaecati, quod sint illo deleniti corporis adipisci animi ea. Ducimus expedita facere delectus vel eum. Exercitationem!</div>
+  <div class="box"></div>
   <div class="box"></div>
 </body>
 
