--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 
 <body>
-  <div class="box"></div>
-  <div class="box"></div>
-  <div class="box"></div>
+  <div class="father">
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
+    <div class="box">4</div>
+    <div class="box">5</div>
+  </div>
 </body>
 
 </html>
