--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
   <div class="father">
-    <div class="box">1</div>
-    <div class="box">2</div>
+    <div class="box">I`m a box, hello world~😎</div>
+    <div class="box">I`m a box, hello world~😎</div>
+    <div class="box">I`m a box, hello world~😎</div>
   </div>
 </body>
 
