--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>CSS Layout Masterclass</title>
   </head>
   <body>
-    <h1>Hello vite</h1>
+    <div class="father">
+      <div class="child">1</div>
+      <div class="child">2</div>
+      <div class="child">3</div>
+      <div class="child">4</div>
+    </div>
   </body>
 </html>
