--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>CSS Layout Masterclass</title>
   </head>
   <body>
-    <header></header>
-    <section></section>
-    <aside></aside>
-    <footer></footer>
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
+    <div class="box">4</div>
   </body>
 </html>
