--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <div class="father">
       <div class="child">1fr</div>
-      <!-- <div class="child">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div> -->
+      <div class="child">1fr</div>
+      <div class="child">1fr</div>
       <div class="child">1fr</div>
       <div class="child">1fr</div>
     </div>
