--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.scss">
     <title>CSS Layout Masterclass</title>
   </head>
   <body>
-    <h1>Hello vite</h1>
+    <div class="father">
+      <div class="child">1fr</div>
+      <div class="child">1fr</div>
+      <div class="child">1fr</div>
+    </div>
   </body>
 </html>
