Fashion Store App

--- a/index.html
+++ b/index.html
@@ -1,69 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles/style.scss">
-  <title>Education App</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/fashion.scss">
+	<title>Fashion Store App</title>
 </head>
-
 <body>
-  <div class="containter">
+	<div class="container">
     <div class="phone">
-      <header class="header">
-        <ul class="header_list">
-          <li class="header_list-item header_list-item-inverted">All</li>
-          <li class="header_list-item">Advertising</li>
-          <li class="header_list-item">Dev & Data Science</li>
-          <li class="header_list-item">Goals</li>
-        </ul>
-      </header>
-      <div class="cards">
-        <div class="cards_card">
-          <h2 class="card_title">The Making of Modern Art</h2>
-          <div class="card_footer">
-            <span class="price">Free</span>
-            <span class="length">1</span>
-          </div>
-        </div>
-        <div class="cards_card">
-          <h2 class="card_title">Mobbile Inerfaces Advaned</h2>
-          <div class="card_footer">
-            <span class="price">Free</span>
-            <span class="length">2</span>
-          </div>
-        </div>
-        <div class="cards_card">
-          <h2 class="card_title">Graphic Design. Professium</h2>
-          <div class="card_footer">
-            <span class="price">$199/month</span>
-            <span class="length">9 months</span>
-          </div>
-        </div>
-        <div class="cards_card">
-          <h2 class="card_title">Web Design Junior</h2>
-          <div class="card_footer">
-            <span class="price">Free</span>
-            <span class="length">3</span>
-          </div>
-        </div>
-        <div class="cards_card">
-          <h2 class="card_title">Inclusive Web Design</h2>
-          <div class="card_footer">
-            <span class="price">$99/mon</span>
-            <span class="length">3</span></div>
-        </div>
-        <div class="cards_card">
-          <h2 class="card_title">Machine Learing</h2>
-          <div class="card_footer">
-            <span class="price">$199/month</span>
-            <span class="length">5 months</span>
-          </div>
-        </div>
+        <header class="header">
+          <span class="header_btn">🌎</span>
+          <h1 class="header_title">My Cart</h1>
+          <span class="header_btn">🛒</span>
+        </header>
+        <section class="total">
+          <span class="total_price">$ 3550</span>
+          <span class="total_subtitle">based on your 5 items</span>
+        </section>
+        <section class="items">
+          <article class="item">
+            <div class="item_info">
+              <div class="item_info-col">
+                <h2 class="item_title">Pop Temple Print T-Shirt</h2>
+                <h3 class="item_subtitle">limited 2002</h3>
+              </div>
+              <div class="item_info-col">
+                <span class="item_total-price">$ 1990</span>
+                <span class="item_piece-price">$ 995 per piece</span>
+              </div>
+            </div>
+            <div class="item_specs">
+              <div class="spec">
+                <span class="spec_title">Size</span>
+                <span class="spec_value">48 - L</span>
+              </div>
+              <div class="spec">
+                <span class="spec_title">QT</span>
+                <span class="spec_value">2 pcs</span>
+              </div>
+            </div>
+            <img src="https://source.unsplash.com/random" class="item_photo">
+          </article>
+          <article class="item">
+            <div class="item_info">
+              <div class="item_info-col">
+                <h2 class="item_title">Pop Temple Print T-Shirt</h2>
+                <h3 class="item_subtitle">limited 2002</h3>
+              </div>
+              <div class="item_info-col">
+                <span class="item_total-price">$ 1990</span>
+                <span class="item_piece-price">$ 995 per piece</span>
+              </div>
+            </div>
+            <div class="item_specs">
+              <div class="spec">
+                <span class="spec_title">Size</span>
+                <span class="spec_value">48 - L</span>
+              </div>
+              <div class="spec">
+                <span class="spec_title">QT</span>
+                <span class="spec_value">2 pcs</span>
+              </div>
+            </div>
+            <img src="https://source.unsplash.com/random" class="item_photo">
+          </article>
+        </section>
       </div>
-    </div>
   </div>
 </body>
-
 </html>
