--- a/index.html
+++ b/index.html
@@ -4,57 +4,103 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/design.scss">
-  <title>Design Agency</title>
+  <link rel="stylesheet" href="styles/architect.scss">
+  <title>Architect Studio</title>
 </head>
 
 <body>
-  <div class="container">
-    <div class="grid">
-      <div class="grid_col">
-        <header class="header">
-          <div class="header_top">
-            <span class="header_reviews">4.98</span>
-            <span class="header_label">Best Reviews</span>
-          </div>
-          <h1 class="header_title">Design</h1>
-          <h3 class="header_subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-        </header>
-        <div class="grid_img"></div>
-        <div class="grid_img"></div>
-      </div>
-
-      <div class="grid_col">
-        <div class="subgrid">
-          <div class="grid_img"></div>
-          <nav class="nav">
-            <ul>
-              <li class="nav_item">About</li>
-              <li class="nav_item">Solutions</li>
-              <li class="nav_item">Portfolio</li>
-              <li class="nav_item">Blog</li>
-            </ul>
-            <span class="nav_cta">Hire Me</span> <!-- Call To Action -->
-          </nav>
-          <div class="grid_cells">
-            <div class="grid_cell">
-              <span>Recent <br> Collaborations</span>
-            </div>
-            <div class="grid_cell">
-              <span>CBP-2</span>
-            </div>
-            <span class="grid_cell-cta">More Cases</span>
-          </div>
-          <div class="grid_img"></div>
-        </div>
-        <div class="blog-post">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error molestiae cupiditate blanditiis voluptas
-            deserunt optio! Reprehenderit nobis sit illo. Inventore qui saepe laborum, impedit consequuntur vitae
-            commodi labore asperiores voluptates.</p>
-        </div>
+  <!-- Ref: http://gowhastings.com/projects -->
+  <div class="bar">
+    <span>Architect Studio</span>
+  </div>
+  <div class="bar">
+    <span>Projects</span>
+  </div>
+  <main class="main">
+    <nav class="nav">
+      <ul>
+        <li class="nav-item">Education</li>
+        <li class="nav-item">Community</li>
+        <li class="nav-item">Food & Culinary</li>
+        <li class="nav-item">Workspace</li>
+      </ul>
+    </nav>
+    <div class="filter">
+      <span class="filter_title">Browse by Client</span>
+      <div class="filter_types">
+        <span class="filter_name">Featured </span>
+        <span class="filterslash">/</span>
+        <span class="filter_name filter_name-selected">Gallery</span>
+        <span class="filterslash">/</span>
+        <span class="filter_name">List</span>
       </div>
     </div>
+    <section class="projects">
+      <div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div>
+      <div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div><div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div><div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div>
+      <div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div>
+      <div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div><div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div><div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div>
+      <div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div>
+      <div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div><div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div><div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div>
+      <div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div>
+      <div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div><div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div><div class="project">
+        <img src="https://source.unsplash.com/random" class="project_img">
+        <span class="project_name">This is my best client!</span>
+      </div>
+    </section>
+  </main>
+  <div class="bar">
+    <span>Projects</span>
   </div>
+  <div class="bar">
+    <span>Menu</span>
+  </div>
+
 </body>
 
 </html>
