--- a/index.html
+++ b/index.html
@@ -4,103 +4,114 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/architect.scss">
-  <title>Architect Studio</title>
+  <link rel="stylesheet" href="styles/macOS.scss">
+  <title>macOS</title>
 </head>
 
 <body>
-  <!-- Ref: http://gowhastings.com/projects -->
-  <div class="bar">
-    <span>Architect Studio</span>
-  </div>
-  <div class="bar">
-    <span>Projects</span>
-  </div>
-  <main class="main">
-    <nav class="nav">
-      <ul>
-        <li class="nav-item">Education</li>
-        <li class="nav-item">Community</li>
-        <li class="nav-item">Food & Culinary</li>
-        <li class="nav-item">Workspace</li>
-      </ul>
-    </nav>
-    <div class="filter">
-      <span class="filter_title">Browse by Client</span>
-      <div class="filter_types">
-        <span class="filter_name">Featured </span>
-        <span class="filterslash">/</span>
-        <span class="filter_name filter_name-selected">Gallery</span>
-        <span class="filterslash">/</span>
-        <span class="filter_name">List</span>
-      </div>
+  <div class="wrapper">
+    <div class="container">
+      <section class="info">
+        <div class="info_hd">
+          <div class="hd_discs">
+            <span></span>
+            <span></span>
+          </div>
+          <div class="hd_footer">
+            <span class="hd_size">4TB</span>
+            <div class="hd_full">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+        </div>
+        <div class="info_hd">
+          <div class="hd_discs">
+            <span></span>
+            <span></span>
+          </div>
+          <div class="hd_footer">
+            <span class="hd_size">4TB</span>
+            <div class="hd_full">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+        </div>
+        <div class="info_hd">
+          <div class="hd_discs">
+            <span></span>
+            <span></span>
+          </div>
+          <div class="hd_footer">
+            <span class="hd_size">4TB</span>
+            <div class="hd_full">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+        </div>
+        <div class="info_hd">
+          <div class="hd_discs">
+            <span></span>
+            <span></span>
+          </div>
+          <div class="hd_footer">
+            <span class="hd_size">4TB</span>
+            <div class="hd_full">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+        </div>
+        <div class="info_space">
+          <div class="info_space-item">
+            <h3>Used (TB) / of Total 8</h3>
+            <h2>5.66</h2>
+          </div>
+          <div class="info_space-item">
+            <h3>Available (TB)</h3>
+            <h2>2.34</h2>
+          </div>
+        </div>
+        <div class="info_settings">
+          <span>Manage Space</span>
+          <span>Disc Settings</span>
+          <span>Create Backup</span>
+        </div>
+      </section>
+      <section class="stats">
+        <div class="stats_info">
+          <span class="stat_name">Free Space</span>
+          <span class="stat_size">2.34TB</span>
+        </div>
+        <div class="stats_info">
+          <span class="stat_name">Documents</span>
+          <span class="stat_size">840.54TB</span>
+        </div>
+        <div class="stats_info">
+          <span class="stat_name">Audio Files</span>
+          <span class="stat_size">1.08TB</span>
+        </div>
+        <div class="stats_info">
+          <span class="stat_name">Images</span>
+          <span class="stat_size">1.82TB</span>
+        </div>
+        <div class="stats_info">
+          <span class="stat_name">Video</span>
+          <span class="stat_size">2.38TB</span>
+        </div>
+      </section>
     </div>
-    <section class="projects">
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-    </section>
-  </main>
-  <div class="bar">
-    <span>Projects</span>
   </div>
-  <div class="bar">
-    <span>Menu</span>
-  </div>
-
 </body>
 
 </html>
