--- a/index.html
+++ b/index.html
@@ -4,67 +4,158 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/error404.scss">
-  <title>Error 404 Poster</title>
+  <link rel="stylesheet" href="styles/pixies.scss">
+  <title>Pixies Poster</title>
 </head>
 
+<!-- Ref: https://www.swissted.com/ -->
 <body>
-  <div class="container">
-    <div class="dot">👽</div>
-    <div class="bar">
-      <span>This page does not exist - This page does not exist - This page does not exist - This page does not exist -
-        This page does not exist - This page does not exist - This page does not exist - This page does not exist - This
-        page does not exist - This page does not exist - This page does not exist - This page does not exist - This page
-        does not exist - This page does not exist - </span>
-    </div>
-    <div class="dot">👽</div>
-    <div class="bar">
-      <span>This page does not exist - This page does not exist - This page does not exist - This page
-        does not exist -
-        This page does not exist - This page does not exist - This page does not exist - This page does not exist - This
-        page does not exist - This page does not exist - This page does not exist - This page does not exist - This page
-        does not exist - This page does not exist - </span>
-    </div>
-    <main>
-      <div class="title">ERROR 404</div>
-      <div class="nav">Exhibition</div>
-      <div class="nav">Literature</div>
-      <div class="nav">Calender</div>
-      <div class="nav">Perfortming Art Projects</div>
-      <div class="nav">Cotact Us</div>
-      <div class="img">
-        <img src="https://source.unsplash.com/random">
+  <div class="poster">
+    <div class="top">
+      <div class="top_box">
+        <span>saturday</span>
+        <span>december 13 1986</span>
+        <span>9 pm over 21</span>
       </div>
-      <div></div>
-      <div></div>
-      <div class="img">
-        <img src="https://source.unsplash.com/random">
+      <div class="top_box">
+        <span>at the rat</span>
+        <span>528 commonwealth</span>
+        <span>boston, mass.</span>
       </div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </main>
-    <div class="bar">
-      <span>This page does not exist - This page does not exist - This page does not exist - This page
-        does not exist -
-        This page does not exist - This page does not exist - This page does not exist - This page does not exist - This
-        page does not exist - This page does not exist - This page does not exist - This page does not exist - This page
-        does not exist - This page does not exist - </span>
+      <div class="top_box">
+        <h1>pixies</h1>
+      </div>
+      <div class="top_box">
+        <span>with</span>
+        <span>throwing muses</span>
+        <span>big dipper</span>
+      </div>
     </div>
-    <div class="dot">👽</div>
-    <div class="bar">
-      <span>This page does not exist - This page does not exist - This page does not exist - This page
-        does not exist -
-        This page does not exist - This page does not exist - This page does not exist - This page does not exist - This
-        page does not exist - This page does not exist - This page does not exist - This page does not exist - This page
-        does not exist - This page does not exist - </span>
+    <div class="bottom">
+      <div class="circles">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
     </div>
-    <div class="dot">👽</div>
   </div>
 </body>
 
