--- a/design.html
+++ b/design.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+  <a href="/beauty.html">
+    <svg class="arr-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z" />
+    </svg></a>
+  <a href="/architect.html">
+    <svg class="arr-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" />
+    </svg>
+  </a>
   <div class="container">
     <div class="grid">
       <div class="grid_col">
@@ -18,7 +29,8 @@
             <span class="header_label">Best Reviews</span>
           </div>
           <h1 class="header_title">Design</h1>
-          <h3 class="header_subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+          <h3 class="header_subtitle">Lorem ipsum dolor sit amet consectetur,adipisicing elit. Error molestiae
+            deserunt optio!</h3>
         </header>
         <div class="grid_img"></div>
         <div class="grid_img"></div>
@@ -38,19 +50,26 @@
           </nav>
           <div class="grid_cells">
             <div class="grid_cell">
-              <span>Recent <br> Collaborations</span>
+              <span>&#9679;&nbsp;&nbsp;&nbsp; My cat likes chur - My cat likes chur - My cat likes chur</span>
             </div>
             <div class="grid_cell">
-              <span>CBP-2</span>
+              <span>&nbsp;&nbsp;&nbsp; Cats save the world - Cats save the world - Cats save the world</span>
             </div>
             <span class="grid_cell-cta">More Cases</span>
           </div>
           <div class="grid_img"></div>
         </div>
         <div class="blog-post">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error molestiae cupiditate blanditiis voluptas
-            deserunt optio! Reprehenderit nobis sit illo. Inventore qui saepe laborum, impedit consequuntur vitae
-            commodi labore asperiores voluptates.</p>
+          <div class="blog_top">
+            <span class="blog_icon">01/02</span>
+            <div class="blog_img"></div>
+            <span class="blog_label">Live <br> Preview</span>
+          </div>
+          <div class="blog_bottom">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error molestiae cupiditate blanditiis voluptas
+              deserunt optio!  Error molestiae cupiditate blanditiis voluptas
+              deserunt optio!</p>
+          </div>
         </div>
       </div>
     </div>
