--- a/fashion.html
+++ b/fashion.html
@@ -7,6 +7,17 @@
 	<title>Fashion Store App</title>
 </head>
 <body>
+  <a href="/">
+    <svg class="arr-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z" />
+    </svg></a>
+  <a href="/beauty.html">
+    <svg class="arr-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" />
+    </svg>
+  </a>
 	<div class="container">
     <div class="phone">
         <header class="header">
@@ -22,7 +33,7 @@
           <article class="item">
             <div class="item_info">
               <div class="item_info-col">
-                <h2 class="item_title">Pop Temple Print T-Shirt</h2>
+                <h2 class="item_title">Pop Temple Print <br> T-Shirt</h2>
                 <h3 class="item_subtitle">limited 2002</h3>
               </div>
               <div class="item_info-col">
@@ -33,11 +44,11 @@
             <div class="item_specs">
               <div class="spec">
                 <span class="spec_title">Size</span>
-                <span class="spec_value">48 - L</span>
+                <span class="spec_value">48 - L &nbsp;&nbsp;&darr;</span>
               </div>
               <div class="spec">
                 <span class="spec_title">QT</span>
-                <span class="spec_value">2 pcs</span>
+                <span class="spec_value">2 pcs &nbsp;&nbsp;&darr;</span>
               </div>
             </div>
             <img src="https://source.unsplash.com/random" class="item_photo">
@@ -45,22 +56,22 @@
           <article class="item">
             <div class="item_info">
               <div class="item_info-col">
-                <h2 class="item_title">Pop Temple Print T-Shirt</h2>
-                <h3 class="item_subtitle">limited 2002</h3>
+                <h2 class="item_title">Chain Reaction Trainers</h2>
+                <h3 class="item_subtitle">limited 2021</h3>
               </div>
               <div class="item_info-col">
-                <span class="item_total-price">$ 1990</span>
-                <span class="item_piece-price">$ 995 per piece</span>
+                <span class="item_total-price">$ 850</span>
+                <span class="item_piece-price">$ 850 per piece</span>
               </div>
             </div>
             <div class="item_specs">
               <div class="spec">
                 <span class="spec_title">Size</span>
-                <span class="spec_value">48 - L</span>
+                <span class="spec_value">45 &nbsp;&nbsp;&darr;</span>
               </div>
               <div class="spec">
                 <span class="spec_title">QT</span>
-                <span class="spec_value">2 pcs</span>
+                <span class="spec_value">1 pcs &nbsp;&nbsp;&darr;</span>
               </div>
             </div>
             <img src="https://source.unsplash.com/random" class="item_photo">
