--- a/index.html
+++ b/index.html
@@ -4,12 +4,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.scss">
-  <title>CSS Layout</title>
+  <link rel="stylesheet" href="styles/education.scss">
+  <title>Education App</title>
 </head>
 
 <body>
-  
+  <a href="/fashion.html">
+    <svg class="arr-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" />
+    </svg>
+  </a>
+  <div class="containter">
+    <div class="phone">
+      <header class="header">
+        <ul class="header_list">
+          <li class="header_list-item header_list-item-inverted">All</li>
+          <li class="header_list-item">Advertising</li>
+          <li class="header_list-item">Dev & Data Science</li>
+          <li class="header_list-item">Goals</li>
+        </ul>
+      </header>
+      <div class="cards">
+        <div class="cards_card">
+          <h2 class="card_title">The<br> Making of Modern Art</h2>
+          <div class="card_footer">
+            <span class="price">Free</span>
+            <span class="length">1</span>
+          </div>
+        </div>
+        <div class="cards_card">
+          <h2 class="card_title">Mobbile Inerfaces Advaned</h2>
+          <div class="card_footer">
+            <span class="price">Free</span>
+            <span class="length">2</span>
+          </div>
+        </div>
+        <div class="cards_card">
+          <h2 class="card_title">Graphic Design.<br> Professium</h2>
+          <div class="card_footer">
+            <span class="price">$199/month</span>
+            <span class="length">9 months</span>
+          </div>
+        </div>
+        <div class="cards_card">
+          <h2 class="card_title">Web <br> Design Junior</h2>
+          <div class="card_footer">
+            <span class="price">Free</span>
+            <span class="length">3</span>
+          </div>
+        </div>
+        <div class="cards_card">
+          <h2 class="card_title">Inclusive Web <br> Design</h2>
+          <div class="card_footer">
+            <span class="price">$99/mon</span>
+            <span class="length">3</span></div>
+        </div>
+        <div class="cards_card">
+          <h2 class="card_title">Machine Learing</h2>
+          <div class="card_footer">
+            <span class="price">$199/month</span>
+            <span class="length">5 months</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
