--- a/architect.html
+++ b/architect.html
@@ -10,95 +10,116 @@
 
 <body>
   <!-- Ref: http://gowhastings.com/projects -->
-  <div class="bar">
-    <span>Architect Studio</span>
-  </div>
-  <div class="bar">
-    <span>Projects</span>
-  </div>
-  <main class="main">
-    <nav class="nav">
-      <ul>
-        <li class="nav-item">Education</li>
-        <li class="nav-item">Community</li>
-        <li class="nav-item">Food & Culinary</li>
-        <li class="nav-item">Workspace</li>
-      </ul>
-    </nav>
-    <div class="filter">
-      <span class="filter_title">Browse by Client</span>
-      <div class="filter_types">
-        <span class="filter_name">Featured </span>
-        <span class="filterslash">/</span>
-        <span class="filter_name filter_name-selected">Gallery</span>
-        <span class="filterslash">/</span>
-        <span class="filter_name">List</span>
-      </div>
+  <a href="/design.html">
+    <svg class="arr-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z" />
+    </svg></a>
+  <a href="/macOS.html">
+    <svg class="arr-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" />
+    </svg>
+  </a>
+  <div class="container">
+    <div class="bar">
+      <span>Architect Studio</span>
     </div>
-    <section class="projects">
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
+    <div class="bar">
+      <span>Projects</span>
+    </div>
+    <main class="main">
+      <nav class="nav">
+        <ul>
+          <li class="nav-item">Education</li>
+          <li class="nav-item">Community</li>
+          <li class="nav-item">Food & Culinary</li>
+          <li class="nav-item">Workspace</li>
+        </ul>
+      </nav>
+      <div class="filter">
+        <span class="filter_title">Browse by Client</span>
+        <div class="filter_types">
+          <span class="filter_name">Featured </span>
+          <span class="filterslash">/</span>
+          <span class="filter_name filter_name-selected">Gallery</span>
+          <span class="filterslash">/</span>
+          <span class="filter_name">List</span>
+        </div>
       </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-      <div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div><div class="project">
-        <img src="https://source.unsplash.com/random" class="project_img">
-        <span class="project_name">This is my best client!</span>
-      </div>
-    </section>
-  </main>
-  <div class="bar">
-    <span>Projects</span>
-  </div>
-  <div class="bar">
-    <span>Menu</span>
+      <section class="projects">
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+        <div class="project">
+          <img src="https://source.unsplash.com/random" class="project_img">
+          <span class="project_name">This is my best client!</span>
+        </div>
+      </section>
+    </main>
+    <div class="bar">
+      <span>Projects</span>
+    </div>
+    <div class="bar">
+      <span>Menu</span>
+    </div>
   </div>
 
 </body>
