--- a/error404.html
+++ b/error404.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+  <a href="/museum.html">
+    <svg class="arr-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z" />
+    </svg></a>
+  <a href="/pixies.html">
+    <svg class="arr-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" />
+    </svg>
+  </a>
   <div class="container">
     <div class="dot">👽</div>
     <div class="bar">
@@ -35,19 +46,53 @@
       <div class="img">
         <img src="https://source.unsplash.com/random">
       </div>
-      <div></div>
-      <div></div>
+      <div class="sub-nav">The Ballad of Sexual Dependency // 2011</div>
+      <div class="sub-nav">Death Is a mistake</div>
       <div class="img">
         <img src="https://source.unsplash.com/random">
       </div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="program">
+        <div class="program_top">
+          <span class="program_date">19 October 2020</span>
+          <span class="program_name">Sofometqi</span>
+        </div>
+        <div class="program_bottom">
+          <h1 class="program_title">Between Cender Identities</h1>
+          <span class="program_desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</span>
+        </div>
+      </div>
+      <div class="program">
+        <div class="program_top">
+          <span class="program_date">29 September 2019</span>
+          <span class="program_name">Cxvari</span>
+        </div>
+        <div class="program_bottom">
+          <h1 class="program_title">Reason without strength</h1>
+          <span class="program_desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</span>
+        </div>
+      </div>
+      <div class="program">
+        <div class="program_top">
+          <span class="program_date">07 August 2020</span>
+          <span class="program_name">Maison Margiela</span>
+        </div>
+        <div class="program_bottom">
+          <h1 class="program_title">Social equality means immortality to us all</h1>
+          <span class="program_desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati aut unde
+            excepturi odit mollitia aliquam deleniti eligendi, dolorum, dolores iusto neque praesentium aperiam.
+            Suscipit illo necessitatibus, temporibus quas porro molestias!</span>
+        </div>
+      </div>
+      <div class="subscribe">
+        <h1>Subscribe</h1>
+        <div class="subscribe_cta"> <span>Your mail here</span>
+          <h1>Send</h1>
+        </div>
+      </div>
+      <div class="sns">Facebook</div>
+      <div class="sns">Twitter</div>
+      <div class="sns">Instagram</div>
+      <div class="diagonal"></div>
     </main>
     <div class="bar">
       <span>This page does not exist - This page does not exist - This page does not exist - This page
