--- a/macOS.html
+++ b/macOS.html
@@ -9,12 +9,41 @@
 </head>
 
 <body>
+  <a href="/architect.html">
+    <svg class="arr-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z" />
+    </svg></a>
+  <a href="/museum.html">
+    <svg class="arr-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+      <path
+        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" />
+    </svg>
+  </a>
   <div class="wrapper">
     <div class="container">
       <section class="info">
+        <div class="hd_header">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="info_hd">
+          <div class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="hd_footer">
+            <span class="hd_size">8TB</span>
+            <span>💿</span>
+          </div>
+        </div>
         <div class="info_hd">
           <div class="hd_discs">
-            <span></span>
+            <span class="disc"></span>
             <span></span>
           </div>
           <div class="hd_footer">
@@ -29,11 +58,11 @@
         </div>
         <div class="info_hd">
           <div class="hd_discs">
-            <span></span>
+            <span class="disc"></span>
             <span></span>
           </div>
           <div class="hd_footer">
-            <span class="hd_size">4TB</span>
+            <span class="hd_size">8TB</span>
             <div class="hd_full">
               <span></span>
               <span></span>
@@ -44,26 +73,11 @@
         </div>
         <div class="info_hd">
           <div class="hd_discs">
-            <span></span>
-            <span></span>
-          </div>
-          <div class="hd_footer">
-            <span class="hd_size">4TB</span>
-            <div class="hd_full">
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-          </div>
-        </div>
-        <div class="info_hd">
-          <div class="hd_discs">
-            <span></span>
+            <span class="disc"></span>
             <span></span>
           </div>
           <div class="hd_footer">
-            <span class="hd_size">4TB</span>
+            <span class="hd_size">2TB</span>
             <div class="hd_full">
               <span></span>
               <span></span>
@@ -83,9 +97,9 @@
           </div>
         </div>
         <div class="info_settings">
-          <span>Manage Space</span>
-          <span>Disc Settings</span>
-          <span>Create Backup</span>
+          <span>🔎 Manage Space</span>
+          <span>💿 Disc Settings</span>
+          <span>💾 Create Backup</span>
         </div>
       </section>
       <section class="stats">
