--- a/error404.html
+++ b/error404.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/error404.scss">
+  <link rel="stylesheet" href="styles/error404.css">
   <title>Error 404 Poster</title>
 </head>
 
