--- a/architect.html
+++ b/architect.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/architect.scss">
+  <link rel="stylesheet" href="styles/architect.css">
   <title>Architect Studio</title>
 </head>
 
