--- a/beauty.html
+++ b/beauty.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/beauty.scss">
+  <link rel="stylesheet" href="styles/beauty.css">
   <title>Beauty Store Web</title>
 </head>
 
